--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ canvas {
 body {
   background-color: var(--color-background);
   padding: 1.75rem 1rem;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
 .product-preview-card {
@@ -72,6 +75,14 @@ body {
   color: var(--color-primary-500);
 }
 
+.product-label {
+  font-family: var(--font-body);
+  font-size: var(--fs-xs);
+  font-weight: var(--fw-normal);
+  text-transform: uppercase;
+  letter-spacing: 0.3125rem;
+}
+
 .product-title,
 .product-current-price {
   font-family: var(--font-heading);
@@ -83,10 +94,6 @@ body {
 .product-title {
   margin-top: 0.75rem;
   color: var(--color-primary-100);
-}
-
-.product-description {
-  margin-top: 1rem;
 }
 
 .product-price-container {
@@ -106,21 +113,14 @@ body {
   text-decoration: line-through;
 }
 
-.product-label {
-  font-family: var(--font-body);
-  font-size: var(--fs-xs);
-  font-weight: var(--fw-normal);
-  text-transform: uppercase;
-  letter-spacing: 0.3125rem;
-}
-
 .product-description {
+  margin-top: 1rem;
   font-size: var(--fs-m);
   font-family: var(--font-body);
   line-height: 1.64;
 }
 
-.button {
+.product-preview-card .button {
   margin-top: 1.25rem;
   font-family: var(--font-body);
   font-size: var(--fs-m);
@@ -133,4 +133,38 @@ body {
   display: flex;
   justify-content: center;
   gap: 0.5rem;
+}
+
+@media (min-width: 376px) {
+  .product-preview-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 37.5rem;
+  }
+
+  .product-preview-card picture img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  .product-information {
+    padding: 2rem;
+  }
+
+  .product-title {
+    margin-top: 1.25rem;
+  }
+
+  .product-description {
+    margin-top: 1.5rem;
+  }
+
+  .product-price-container {
+    margin-top: 1.8125rem;
+  }
+
+  .product-preview-card .button {
+    margin-top: 1.875rem;
+  }
 }
